--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,15 @@
-body {
-    color: white;
-    background-color: black;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
+
+body {
+    font-family: Arial, sans-serif;
+}
+
+header nav {
+    display: flex;
+    justify-content: space-around;
+}
+ 
