--- a/src/style.css
+++ b/src/style.css
@@ -5,6 +5,10 @@
     box-sizing: border-box;
 }
 
+:root {
+    --heading: #ff7e5f;
+}
+
 body {
     font-family: Arial, sans-serif;
     background-color: #aaa; 
@@ -19,6 +23,7 @@ header {
    padding: 10px 0;
    text-align: center;
    width: 100%;
+   position: fixed;
 }
  
 nav button {
@@ -49,7 +54,7 @@ nav button {
     opacity: 0;
     transform: translateY(20px);
     animation: fadeInUp 1s ease-out forwards;
-    background: rgba(0, 0, 0, 0.5);
+    background: rgba(0, 0, 0, 0.3);
     padding: 1rem;
     border-radius: 10px;
 }
@@ -71,6 +76,79 @@ nav button {
     line-height: 2;
     color:#fff;
     
+}
+
+.menu-page {
+    display: flex;
+    flex-direction: column;
+    padding: 2em;
+    color: #fff;
+    align-items: center;
+}
+
+.menu-page h1 {
+    font-size: 2em;
+    margin-bottom: 0.5em;
+    color: var(--heading);
+    text-align: center;
+}
+
+.menu-page p {
+    font-size: 1.2em;
+    margin-bottom: 2em;
+    text-align: center;
+    max-width: 800px;
+    color: #fff;
+    
+}
+
+.menu-items {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+   
+}
+
+.menu-item {
+    background: rgba(0, 0, 0, 0.3);
+    margin: 0.6em;
+    padding: 1em;
+    width: 200px;
+    height: 350px;
+    display: flex;
+    flex-direction: column;
+    align-items: center; 
+    justify-content: center;
+    transition: transform 0.3s;
+}
+
+.menu-item:hover {
+    transform: scale(1.05);
+}
+
+
+.menu-item img {
+    border-radius: 10px;
+    width: 100px;
+    height: 100px;
+    
+
+}
+
+.menu-item h2 {
+    font-size: 1em;
+    margin: 1em 0;
+    color: var(--heading);
+}
+
+.menu-item p {
+    font-size: 0.9em;
+    text-align: start;
+}
+
+.menu-item .price {
+    font-weight: bold;
+    align-self: center;
 }
 
 @keyframes fadeInUp {
